--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -1,313 +1,42 @@
-html, body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .top-ribbon {
-    background-color: #111;
-    height: 101px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 20px;
-    color: white;
-    font-size: 40px;
-  }
-  
-h3 {
-    font-family: Arial, sans-serif;
-  }
-  .button-home {
-    background-color: #5C6BC0;
-    color: #ffffff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-bottom: 0;
-    line-height: 1;
-    text-decoration: none; /* Removes underline */
-    font-style: normal; /* Removes italics */
-    display: inline-block; /* Aligns the button horizontally */
-    margin-right: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-  }
-  
-  .button-home:hover {
-    background-color: #3F51B5;
-    color: #ffffff;
-  }
-
-  .company-name {
-    margin-right: 10px;
-    font-family: Arial, sans-serif; 
-    font-weight: bold;
-    font-style: italic;
-  }
-  
-  .company-name img {
-    height: 101px; /* Adjust as needed */
-    width: auto;
-  }
-  
-  
-
-.sidepanel {
-    height: 100%; /* Specify a height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0;
+.popup {
+    position: fixed;
+    z-index: 1;
     left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
-    font-family: Tahoma;
-  }
-  
-  /* The sidepanel links */
-.sidepanel a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 32px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-  height: 46px;
-  padding-top: 30px;
-  border-bottom: 1px solid #818181;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(
+        0,
+        0,
+        0,
+        0.4
+    );
+    display: none;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    
 }
-
-  .mgn-top {
-    margin-top: 42px;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidepanel a:hover {
-    color: #f1f1f1;
-  }
-  
-  /* Position and style the close button (top right corner) */
-  .sidepanel .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-  .closebtn {
-    border-bottom: none;
-    margin-top: 20px;
-    height: 65px;
-    width: 50px;
-  }
-  
-  /* Style the button that is used to open the sidepanel */
-  .openbtn {
-    font-size: 32px;
-    cursor: pointer;
-    background-color: #111;
-    color: rgb(255, 255, 255);
-    padding: 20px 26px;
-    border: none;
-    height: 50;
-    width: 50;
-  }
-  
-  .openbtn:hover {
-    background-color: #444;
-  }
-
-  .btns {
-    font-size: 50px;
-    cursor: pointer;
-    background-color: #111;
-    color: rgb(255, 255, 255);
-    padding: 15px 15px 10px 15px;
-    border: none;
-  }
-  
-  .btns:hover {
-    background-color: #444;
-  }
-
-
-    /* The sidepanel menu ***************************************************************************************************/
-  .sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 80px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #111; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
+.popup-content {
+    background-color: #ffffff;
+    margin: 10% auto;
+    padding: 20px;
+    width: 30%;
+    border-radius: 15px;
+    /* background-color: #313131; */
+    color: #3a3a3a;
+}
+.popup-content button {
     display: block;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }  /* Style page content */
-  .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
-
-/* Styles for table rows based on feedback type */
-.like {
-    background-color: darkgreen;
+    margin: 0 auto;
 }
-
-.dislike {
-    background-color: darkred;
-}
-
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 100px;
-}
-
-.questions-container {
-    flex-basis: 70%;
-    margin: 10px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(252, 252, 252, 0.1);
-    background-color: #161616;
-}
-
-.chart-container {
-    flex-basis: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-    height: 600px;
-    background-color: #161616;
-}
-
-.chart-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-/* Table styling */
-.questions-container table {
-  width: 100%;
-  border-collapse: collapse;
-  font-family: Arial, sans-serif; /* Use a clean, simple font */
-  border-radius: 10px;
-}
-
-.questions-container th {
-  border: 1px solid #ddd;
-  padding: 12px 8px;
-  text-align: left;
-  background-color: #c1c1c1; /* Light grey background for headers */
-  color: #333;
-}
-
-.questions-container td {
-  border: 1px solid #ddd; /* Lighter border color for data cells */
-  padding: 8px;
-  text-align: left;
-}
-
-/* Add a hover effect for rows */
-.questions-container tr:hover {background-color: #535353;}
-
-
-.instructions {
-    font-family: Arial, sans-serif;
-    margin-left: 100px;
-}
-
-.topics-container button {
-  margin-right: 10px;
-  margin-bottom: 6px;
-  background-color: rgb(120, 120, 120);
-  transition: all 0.3s ease;
-  color: white;
-  border: none;
-  border-radius: 10%;
-  height: 20px;
-  width: auto;
-  
-}
-
-.topics-container button:hover,
-.topics-container button:focus {
-  background-color: black;
-  color: white;
-  transform: scale(1.1);
-}
-
-.topics-container {
-    margin-bottom: 10px;
-    justify-content: center;
-}
-
-.tooltip {
-  position: relative;
-  display: inline-block;
-}
-
-.tooltip .tooltip-text {
-  visibility: hidden;
-  width: 200px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px;
-  position: absolute;
-  z-index: 1001;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -100px;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.tooltip:hover .tooltip-text {
-  visibility: visible;
-  opacity: 1;
-}
-body {
-  background-color: #313131;
-  color: rgb(237, 237, 237);
-  font-family: Tahoma;
-}
-#popup_button {
-  display: none;
+.show {
+    display: block;
 }
 .upgrade-button:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px rgba(60, 185, 60, 0.5);
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(60, 185, 60, 0.5);
 }
 
 .upgrade-button:hover {
-  background-color: rgb(80, 205, 80);
+    background-color: rgb(80, 205, 80);
 }
