--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11338,3 +11338,46 @@ body {
 .specialty.bold {
   font-weight: bold !important;
 }
+
+.popup {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(
+      0,
+      0,
+      0,
+      0.4
+  );
+  display: none;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  
+}
+.popup-content {
+  background-color: #ffffff;
+  margin: 10% auto;
+  padding: 20px;
+  width: 30%;
+  border-radius: 15px;
+  /* background-color: #313131; */
+  color: #3a3a3a;
+}
+.popup-content button {
+  display: block;
+  margin: 0 auto;
+}
+.show {
+  display: block;
+}
+.upgrade-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(60, 185, 60, 0.5);
+}
+
+.upgrade-button:hover {
+  background-color: rgb(80, 205, 80);
+}
