--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -160,27 +160,25 @@
             </table>
         </div>
     </div>
-
-    <a id="myButton">Click me</a>
-<div id="myPopup" class="popup">
-    <div class="popup-content" style="display: flex; flex-direction: column; justify-content: flex-end;">
-        <p id="closePopup" class="close"></p>
-        <h4>
-            <b>To view this feature upgrade your plan</b>
-        </h4>
-        <p>With the starter account you will receive:</p>
-        <ol style="line-height: 1.8; font-size: 1.25em; margin-left: 20px; list-style-type: decimal;">
-            <li style="list-style: none;">1.) 3 Chatbots</li>
-            <li style="list-style: none;">2.) 25 MB Storage</li>
-            <li style="list-style: none;">3.) Lead Collection</li>
-            <li style="list-style: none;">4.) Analytics</li>
-            <li style="list-style: none;">5.) Chat GPT 4.0</li>
-        </ol>
-        <div style="display: flex; justify-content: center; align-items: center; border: none; width: 100%;">
-            <a href="https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM" role="button" class="btn upgrade-button" style="width: 100%; background-color: rgb(18, 158, 18); color: #ffffff;"><b>Upgrade your plan</b></a>
+    <div id="myPopup" class="popup">
+        <div class="popup-content" style="display: flex; flex-direction: column; justify-content: flex-end;">
+            <p id="closePopup" class="close"></p>
+            <h4>
+                <b>To view this feature upgrade your plan</b>
+            </h4>
+            <p>With the starter account you will receive:</p>
+            <ol style="line-height: 1.8; font-size: 1.25em; margin-left: 20px; list-style-type: decimal;">
+                <li style="list-style: none;">1.) 3 Chatbots</li>
+                <li style="list-style: none;">2.) 25 MB Storage</li>
+                <li style="list-style: none;">3.) Lead Collection</li>
+                <li style="list-style: none;">4.) Analytics</li>
+                <li style="list-style: none;">5.) Chat GPT 4.0</li>
+            </ol>
+            <div style="display: flex; justify-content: center; align-items: center; border: none; width: 100%;">
+                <a href="https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM" role="button" class="btn upgrade-button" style="width: 100%; background-color: rgb(18, 158, 18); color: #ffffff;"><b>Upgrade your plan</b></a>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
 {% block scripts %}
@@ -257,7 +255,7 @@
             });
         </script>
         <script type="text/javascript">
-            var userPlan = "{{ user_plan }}";
+            var userPlan = "{{ subscription_item_id }}";
         </script>
         <script>
             var viewDetailsLink = document.getElementById('viewDetailsLink');
@@ -265,26 +263,10 @@
             viewDetailsLink.addEventListener(
                 "click",
                 function (event) {
-                    if (userPlan == 'starter') {
+                    if (userPlan == 'free') {
                         event.preventDefault();
                         myPopup.classList.add("show");
                     }
-                }
-            );
-
-            myButton.addEventListener(
-                "click",
-                function () {
-                    if (userPlan == 'starter') {
-                        myPopup.classList.add("show");
-                    }
-                }
-            );
-
-            closePopup.addEventListener(
-                "click",
-                function () {
-                    myPopup.classList.remove("show");
                 }
             );
 
@@ -297,12 +279,6 @@
                 }
             );
         document.addEventListener('DOMContentLoaded', function() {
-            // Function to show upgrade popup
-            // function showUpgradePopup() {
-            //     alert("Please upgrade to view more questions.");
-            //     // You can replace the above alert with a more sophisticated modal/popup implementation
-            // }
-
             // Using event delegation for both the page size selector and pagination links
             document.body.addEventListener('click', function(e) {
                 if (e.target.matches('.datatable-selector')) {
@@ -365,48 +341,4 @@
             }
         });
         </script>
-        <style>
-            .popup {
-                position: fixed;
-                z-index: 1;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                overflow: auto;
-                background-color: rgba(
-                    0,
-                    0,
-                    0,
-                    0.4
-                );
-                display: none;
-                box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-                
-            }
-            .popup-content {
-                background-color: #ffffff;
-                margin: 10% auto;
-                padding: 20px;
-                width: 30%;
-                border-radius: 15px;
-                /* background-color: #313131; */
-                color: #3a3a3a;
-            }
-            .popup-content button {
-                display: block;
-                margin: 0 auto;
-            }
-            .show {
-                display: block;
-            }
-            .upgrade-button:focus {
-                outline: none;
-                box-shadow: 0 0 0 2px rgba(60, 185, 60, 0.5);
-            }
-
-            .upgrade-button:hover {
-                background-color: rgb(80, 205, 80);
-            }
-        </style>
 {% endblock %}
