--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -160,25 +160,6 @@
             </table>
         </div>
     </div>
-    <div id="myPopup" class="popup">
-        <div class="popup-content" style="display: flex; flex-direction: column; justify-content: flex-end;">
-            <p id="closePopup" class="close"></p>
-            <h4>
-                <b>To view this feature upgrade your plan</b>
-            </h4>
-            <p>With the starter account you will receive:</p>
-            <ol style="line-height: 1.8; font-size: 1.25em; margin-left: 20px; list-style-type: decimal;">
-                <li style="list-style: none;">1.) 3 Chatbots</li>
-                <li style="list-style: none;">2.) 25 MB Storage</li>
-                <li style="list-style: none;">3.) Lead Collection</li>
-                <li style="list-style: none;">4.) Analytics</li>
-                <li style="list-style: none;">5.) Chat GPT 4.0</li>
-            </ol>
-            <div style="display: flex; justify-content: center; align-items: center; border: none; width: 100%;">
-                <a href="https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM" role="button" class="btn upgrade-button" style="width: 100%; background-color: rgb(18, 158, 18); color: #ffffff;"><b>Upgrade your plan</b></a>
-            </div>
-        </div>
-    </div>
 {% endblock %}
 
 {% block scripts %}
@@ -263,7 +244,7 @@
             viewDetailsLink.addEventListener(
                 "click",
                 function (event) {
-                    if (userPlan == 'free') {
+                    if (userPlan == 'price_1P9FIULO2ToUaMQEmx2wG1qC') {
                         event.preventDefault();
                         myPopup.classList.add("show");
                     }
