--- a/static/css/index.css
+++ b/static/css/index.css
@@ -151,6 +151,8 @@
             font-family: var(--font-family);
             align-items: center;
             color: var(--title-color);
+            display: flex;
+            justify-content: flex-start;
         }
 
         .close-button {
