--- a/templates/settings.html
+++ b/templates/settings.html
@@ -132,7 +132,7 @@
                     <label for="bot_LLM">Assistant LLM:</label>
                     <select id="bot_LLM" name="bot_LLM" {% if user_plan =='price_1P9FIULO2ToUaMQEmx2wG1qC' %}disabled{% endif %}>
                         <option value="gpt-3.5-turbo" {% if settings['LLM'] == 'gpt-3.5-turbo' %}selected{% endif %}>GPT 3.5 Turbo</option>
-                        <option value="gpt-4-turbo" {% if settings['LLM'] == 'gpt-4-turbo' %}selected{% endif %}>GPT 4.0 Turbo</option>
+                        <option value="gpt-4o" {% if settings['LLM'] == 'gpt-4o' %}selected{% endif %}>GPT-4o</option>
                     </select><br><br>
 
                     <label for="greeting_message">Greeting Message:</label>
