Figured out how to limit rows in table or disable pagination depending upon certain criteria

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -74,7 +74,7 @@
                         <br><em><small>Must be no more than 50 characters.</small></em>
                         <br><br>
 
-                        <label for="include_email_form">Include Email Form:</label>
+                        <label for="include_email_form">Include Lead Collection Form:</label>
                         <input type="checkbox" id="include_email_form" name="include_email_form" {% if settings['include_email_form'] %}checked{% endif %}>
                     </div>
                     <div class="settings-section">
