Stylized upgrade button a bit more and switched pricing plan so upgrade works how it would in production

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -109,7 +109,7 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-chart-area me-1"></i>
-                    Monthly Chatbot Uses
+                    Weekly Chatbot Uses
                 </div>
                 <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
             </div>
@@ -131,7 +131,7 @@
         </div>
         <div class="card-body">
             <div class="upgrade-container" id="upgrade-container" style="display: none;">
-                <p><b><a class="upgrade_button" onclick="window.open('https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM', '_blank');">Upgrade</a> your plan to see all questions and answers</b></p>
+                <p><b><a class="upgrade_button btn btn-sm" style="background-color: rgb(178, 226, 75); color: #fff; transition: background-color 0.3s ease; cursor: pointer; text-decoration: none; font-style: normal; outline: none;" onclick="window.open('https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM', '_blank');">Upgrade</a> your plan to see all questions and answers</b></p>
                 <!-- <button onclick="window.open('https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM', '_blank');">Upgrade</button> -->
             </div>
             
