--- a/templates/settings.html
+++ b/templates/settings.html
@@ -101,16 +101,16 @@
                                     <div class="settings-group">
                                         <label for="chatbot_title">Chatbot Title:</label>
                                         <input type="text" id="chatbot_title" name="chatbot_title" value="{{ settings['chatbot_title'] }}" maxlength="20">
-                                        <div><em><small>Must be no more than 20 characters.</small></em></div>
+                                        <div><em><small>Maximum 20 characters.</small></em></div>
                                     </div>
                                     <div class="settings-group">
                                         <label for="popup_message">Pop Up Message:</label>
                                         <input type="text" id="popup_message" name="popup_message" value="{{ settings['popup_message'] }}" style="min-width: 300px;" maxlength="50">
-                                        <div><em><small>Must be no more than 50 characters.</small></em></div>
+                                        <div><em><small>Maximum 50 characters.</small></em></div>
                                     </div>
-                                    <div class="settings-group">
+                                    <!-- <div class="settings-group">
                                         <label for="include_email_form">Include Email Form:</label>
-                                        <input type="checkbox" id="include_email_form" name="include_email_form" {% if settings['include_email_form'] %}checked{% endif %}>
+                                        <input type="checkbox" id="include_email_form" name="include_email_form" {% if settings['include_email_form'] %}checked{% endif %}> -->
                                     </div>
                                 </div>
                             </div>
@@ -126,10 +126,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Branding Settings</h5>
                             <div class="settings-section">
-
-                                <label for="logo">Chatbot Name:</label><br>
+                                <!-- <label for="logo">Chatbot Name:</label><br>
                                 <input type="text" id="chatbot_name" name="chatbot_name" value="{{ settings['chatbot_name'] }}" maxlength="20"><br>
-                                <em><small>Must be no more than 20 characters.</small></em><br><br>
+                                <em><small>Must be no more than 20 characters.</small></em><br><br> -->
                                 <label for="logo">Logo:</label><br>
                                 <img id="currentLogo" src="{{ settings['logo'] }}" alt="Current Logo" style="width: 100px; height: 100px;">
                                 <br>
