--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11364,6 +11364,7 @@ body {
   width: 30%;
   border-radius: 15px;
   /* background-color: #313131; */
+  min-width: 1200px;
   color: #3a3a3a;
 }
 .popup-content button {
