--- a/templates/base.html
+++ b/templates/base.html
@@ -86,17 +86,11 @@
                                 <h4>
                                     <b>To view this feature upgrade your plan</b>
                                 </h4>
-                                <p>With the starter account you will receive:</p>
-                                <ol style="line-height: 1.8; font-size: 1.25em; margin-left: 20px; list-style-type: decimal;">
-                                    <li style="list-style: none;">1.) 3 Chatbots</li>
-                                    <li style="list-style: none;">2.) 25 MB Storage</li>
-                                    <li style="list-style: none;">3.) Lead Collection</li>
-                                    <li style="list-style: none;">4.) Analytics</li>
-                                    <li style="list-style: none;">5.) Chat GPT 4.0</li>
-                                </ol>
-                                <div style="display: flex; justify-content: center; align-items: center; border: none; width: 100%;">
-                                    <a href="https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM" role="button" class="btn upgrade-button" style="width: 100%; background-color: rgb(18, 158, 18); color: #ffffff;"><b>Upgrade your plan</b></a>
-                                </div>
+                                <p>Explore our plans:</p>
+                                <!-- Stripe Pricing Table -->
+                                <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
+                                <stripe-pricing-table pricing-table-id="prctbl_1OuJCtLO2ToUaMQECUURg73l" publishable-key="pk_live_51Om2ZyLO2ToUaMQEquLu8CUtqxaBR16T2Ib4lQWMRaxQOa9wkjfEzP0rFJEo8jfwzMCvWgXpoFOykI86X4eVjnY000qL9nkvUF">
+                                </stripe-pricing-table>
                             </div>
                         </div>
                     </div>
