a few UI changes to charts and Paywall

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
                             <div class="popup-content" style="display: flex; flex-direction: column; justify-content: flex-end;">
                                 <p id="closePopup" class="close"></p>
                                 <h4>
-                                    <b>To view this feature upgrade your plan</b>
+                                    <b>Upgrade your plan to <b style="color: rgb(158, 222, 18);">Professional</b> to view this feature</b>
                                 </h4>
                                 <p>Explore our plans:</p>
                                 <!-- Stripe Pricing Table -->
