--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -109,7 +109,7 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-chart-area me-1"></i>
-                    Weekly Chatbot Uses
+                    Chatbot Uses Over Time
                 </div>
                 <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
             </div>
@@ -185,6 +185,10 @@
             var maxValue = Math.max(...data);
             var yAxisMax = Math.ceil(maxValue * 1.2);
 
+            // Calculate the total questions asked
+            var totalQuestions = data.reduce((acc, currentValue) => acc + currentValue, 0);
+
+
             // Calculate the maximum value for the y-axis
             // var yAxisMax = maxValue * 1.2;  // 20% more than the maximum value
 
@@ -236,6 +240,11 @@
                 },
                 legend: {
                 display: false
+                },
+                title: {
+                    display: true,
+                    text: 'Total Questions Asked: ' + totalQuestions,
+                    fontSize: 16
                 }
             }
             });
